# npd

./: .bumpversion.cfg  .bumpversion.toml  .env  Dockerfile  README.md  compose.yaml  docker-compose.cpython.yml  draw.py  main.py  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.py
npd/: convex.py  draw.py  nonconvex.py  npd.py  npd2.py  smoothing.py  structures.py  utils.py
tests/: config.py
tests/npd_tests/: .coverage  coverage.xml  test_is_articulation_triangle.py  test_split.py  test_split_into_two.py
tests/npd_tests/.hypothesis/examples/02cce0d1b78fccd1/: 0f4c3f1a53e0d1b1  229cc248234d9c91  299ae082e062635c  32c04e2afcb00d5a  3381496c5a27167a  4c6998ee754bdb6b  616c3c12ac540085  63ee483d50f8f074  71fb844e005abecc  740d90d769e1fc37  78b01e5f3ebdf898  791430a5870a9919  83f962985e3eb25b  8aef055fc36fdfbf  8cb5424d75903fcf  8fc113eb085aa3bf  930162fe133faa2b  a7bc784c9215dda7  b80ace1054c04290  c60bed0e7d569434  cf034f7b09113327  e4d106899e1d8937  e64ffc2899e782ea  e8a5edfb94b2c50c  ee57864b3964015f  f57653d6bc6c8304
tests/npd_tests/.hypothesis/examples/15e97a85b629585e/: 57cdcbad5174947c  6b7d9512a82864d5  d42aebecabf8f106  f38f4e6d478f02df
tests/npd_tests/.hypothesis/examples/2d09de53ba5f3851/: 012685706623cb07  0c55564c4224ee9a  0c988c72ea126ee8  0d5a84f128eb858e  0f04fe5740f3cec5  11a3dfe1a13d9e00  15ca82e7320534cc  16077b1fea220120  16e5c13fa71d73ca  1b24b0f6c8da5d7d  1bbfb806b6a18cf6  1d7f18269c64c969  225c12e5c8619d11  23892f93ddfe7e1a  2710bcb8b16b9697  (+75 more)
tests/strategies/: base.py  utils.py
(+320 files in other folders)
