[tool.poetry]
name = "npd"
version = "0.1.0"
description = ""
authors = ["GeorgySk <skorobogatov@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
gon = "^5.0.0"
ground = "^8.2.0"
matplotlib = "^3.6.2"
networkx = "^2.8.8"
sect = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
hypothesis = "^6.60.0"
hypothesis-geometry = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
