[tool.poetry]
name = "npd"
version = "0.3.0-alpha"
description = ""
authors = ["GeorgySk <skorobogatovgeorgy+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gon = "^5.0.0"
ground = "^8.2.0"
matplotlib = "^3.6.2"
networkx = "^2.8.8"
sect = "^6.1.0"
pdan = "^0.1.9"

[tool.poetry.group.dev.dependencies]
bump-my-version = "^0.18.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
hypothesis = "^6.60.0"
hypothesis-geometry = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["npd"]

[tool.pytest.ini_options]
addopts = "--verbose -s --hypothesis-profile=default"
